# Game-Java

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: .gitignore  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx
frontend/src/pages/: GamePage.jsx  HomePage.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx
frontend/src/styles/: AuthPages.css  GamePage.css  HomePage.css  ProfilePage.css
src/: config.rs  db.rs  main.rs  models.rs  utils.rs
src/handlers/: auth.rs  character.rs  exercise.rs  health.rs  leaderboard.rs  lesson.rs  mod.rs  user.rs
