[package]
name = "language_learning_game"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
cors = "0.4"
actix-cors = "0.7"

[dev-dependencies]
